python-compiler/tests/snapshots/edge_cases__deep_recursion.snap
---
source: tests/edge_cases.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i64 @countdown(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan65 = and i64 %0, 9221120237041090560
  %is_float.not.not66 = icmp eq i64 %check_qnan65, 9221120237041090560
  %i64_to_f6467 = bitcast i64 %0 to double
  %extract_payload68 = and i64 %0, 281474976710655
  %is_negative.not69 = icmp ult i64 %extract_payload68, 140737488355328
  %masksel70 = select i1 %is_negative.not69, i64 0, i64 -281474976710656
  %signed_payload71 = or disjoint i64 %masksel70, %extract_payload68
  %payload_to_f6472 = sitofp i64 %signed_payload71 to double
  %final_payload73 = select i1 %is_float.not.not66, double %payload_to_f6472, double %i64_to_f6467
  %cmptmp74 = fcmp ogt double %final_payload73, 0.000000e+00
  br i1 %cmptmp74, label %then, label %ifcont

then:                                             ; preds = %entry, %print_end
  %final_payload80 = phi double [ %final_payload, %print_end ], [ %final_payload73, %entry ]
  %extract_payload79 = phi i64 [ %extract_payload, %print_end ], [ %extract_payload68, %entry ]
  %is_float.not.not78 = phi i1 [ %is_float.not.not, %print_end ], [ %is_float.not.not66, %entry ]
  %.tr75 = phi i64 [ %pyobject, %print_end ], [ %0, %entry ]
  %tag_bits = lshr i64 %.tr75, 48
  %tag = and i64 %tag_bits, 7
  %is_bool = icmp eq i64 %tag, 1
  %is_string = icmp eq i64 %tag, 2
  %is_list = icmp eq i64 %tag, 3
  %1 = trunc i64 %tag_bits to i3
  %2 = select i1 %is_bool, i3 2, i3 %1
  %3 = select i1 %is_string, i3 3, i3 %2
  %4 = select i1 %is_list, i3 -4, i3 %3
  %trunc = select i1 %is_float.not.not78, i3 %4, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

ifcont:                                           ; preds = %print_end, %entry
  ret i64 9221120237041090560

print_int:                                        ; preds = %then
  %to_int = fptosi double %final_payload80 to i64
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %then
  %printf_float = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload80)
  br label %print_end

print_string:                                     ; preds = %then
  %payload_to_ptr = inttoptr i64 %extract_payload79 to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  %subtmp = fadd double %final_payload80, -1.000000e+00
  %float_to_i64 = bitcast double %subtmp to i64
  %payload_to_i64 = fptosi double %subtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %is_float.not.not78, i64 %nanboxed, i64 %float_to_i64
  %check_qnan = and i64 %pyobject, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %pyobject to double
  %extract_payload = and i64 %pyobject, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %cmptmp = fcmp ogt double %final_payload, 0.000000e+00
  br i1 %cmptmp, label %then, label %ifcont
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %calltmp = tail call i64 @countdown(i64 9221120237041090565)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
