python-compiler/tests/snapshots/edge_cases__zero_operations.snap
---
source: tests/edge_cases.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string.13 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  %printf_int9 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  %printf_int17 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  %printf_int25 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  %printf_int33 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  %printf_int41 = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string.13, i64 0)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #0

attributes #0 = { nofree nounwind }
